# Opp-Labs

./: .gitignore  CMakeLists.txt  README.md
Lab0/: CMakeLists.txt  lab0.cpp  main.cpp
Lab1/: CMakeLists.txt  README.md  lab1.cpp  main.cpp
Lab2/: CMakeLists.txt  README.md  lab2.cpp  main.cpp  variant1.cpp  variant2.cpp
Lab3/: CMakeLists.txt  README.md  lab3.cpp
Lab4/: CMakeLists.txt  README.md  lab4.cpp
Lab5/: README.md  lab5.cpp
