cmake_minimum_required(VERSION 3.6)
project(Opp-Labs)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_COMPILER "/usr/bin/mpic++")

add_executable(Lab0 Lab0/lab0.cpp)
add_executable(Lab1 Lab1/lab1.cpp)
add_executable(Lab2 Lab2/lab2.cpp)
add_executable(Lab3 Lab3/lab3.cpp)
add_executable(Lab4 Lab4/lab4.cpp)
add_executable(Lab5 Lab5/lab5.cpp)
